# SPIDERMAN

./: README.md  dokploy.yaml  pyproject.toml
src/backend/: .dockerignore  .env.example  .env.production  Dockerfile  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yaml  pyproject.toml  redis.conf
src/backend/src/: config.py  crawler.py  database.py  graph_databse.py  graph_schema.py  main.py  model.py  schema.py  storage.py  test.py  worker.py
src/backend/src/templates/: report_batch.html
src/backend/src/worker/: __init__.py  crawler.py
src/backend/static/: report.css
src/backend/templates/: report.html
src/frontend/: README.md  index.html  package-lock.json  package.json  res.json  vite.config.ts
src/frontend/public/logos/: lower.bat
src/frontend/src/: App.css  App.tsx  main.tsx
src/frontend/src/components/bars/: app-sidebar.tsx  left-sidebar.tsx  right-sidebar.tsx  top-bar.tsx
src/frontend/src/components/reports/: report-buttons.tsx
src/frontend/src/components/ui/: multi-select-filter.tsx  scroll-area.tsx  theme-provider.tsx
src/frontend/src/components/views/: geospatial-map-view.tsx  main-views.tsx  network-graph-view.tsx
src/frontend/src/hooks/: useTaskContext.ts  useTheme.ts
src/frontend/src/lib/: config.ts
src/frontend/src/lib/api/: graph-api.ts  report-api.ts  task-api.ts
src/frontend/src/lib/contexts/: task-context.tsx
src/frontend/src/lib/dummies/: graph.ts
src/frontend/src/lib/types/: entity.ts  filter.ts  graph.ts  theme.ts
src/frontend/src/lib/utils/: debounce.ts  task-history.ts  url-params.ts
src/frontend/src/pages/: entity-profile-page.tsx  network-dashboard-page.tsx  network-graph-page.tsx  task-monitor-page.tsx
