[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "M Fauzan Azhim",email = "101320828+fauzanazz@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "celery (>=5.5.3,<6.0.0)",
    "neo4j (>=5.28.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
