[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service for SPIDERMAN project"
authors = ["M Fauzan Azhim <101320828+fauzanazz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.13"}
neo4j = "^5.28.1"
celery = {extras = ["redis"], version = "^5.5.3"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
