[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service for SPIDERMAN project"
authors = ["M Fauzan Azhim <101320828+fauzanazz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.13"}
neo4j = "^5.28.1"
celery = {extras = ["redis"], version = "^5.5.3"}
python-dotenv = "^1.1.1"
browser-use = "^0.4.0"
weasyprint = {extras = ["visual"], version = "^65.1"}
boto3 = "^1.39.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
freezegun = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
